--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -12,6 +12,7 @@
     "src/polyfills.ts"
   ],
   "include": [
+    "src/app/core/guards/auth.guard.spec.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
   ]
