--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -12,6 +12,8 @@
     "src/polyfills.ts"
   ],
   "include": [
+    // "src/app/core/interceptors/jwt.interceptor.spec.ts",
+    "src/**/**/.spec.ts",
     "src/app/core/guards/auth.guard.spec.ts",
     "src/**/*.spec.ts",
     "src/**/*.d.ts"
