--- a/package.json
+++ b/package.json
@@ -21,6 +21,11 @@
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/effects": "^8.3.0",
+    "@ngrx/router-store": "^8.3.0",
+    "@ngrx/store": "^8.3.0",
+    "@ngrx/store-devtools": "^8.3.0",
     "hammerjs": "^2.0.8",
     "material-design-icons-iconfont": "^5.0.1",
     "rxjs": "~6.4.0",
