--- a/angular.json
+++ b/angular.json
@@ -124,5 +124,8 @@
       }
     }
   },
-  "defaultProject": "FsmsApp"
+  "defaultProject": "FsmsApp",
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
+  }
 }
