--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
     "@ngrx/router-store": "^8.3.0",
     "@ngrx/store": "^8.3.0",
     "@ngrx/store-devtools": "^8.3.0",
+    "flexboxgrid": "^6.3.1",
+    "google-libphonenumber": "^3.2.5",
     "hammerjs": "^2.0.8",
     "material-design-icons-iconfont": "^5.0.1",
+    "ngx-international-phone-number": "^1.0.4",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
