--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ngrx/router-store": "^8.3.0",
     "@ngrx/store": "^8.3.0",
     "@ngrx/store-devtools": "^8.3.0",
+    "flag-icon-css": "^3.4.2",
     "flexboxgrid": "^6.3.1",
     "google-libphonenumber": "^3.2.5",
     "hammerjs": "^2.0.8",
@@ -44,7 +45,7 @@
     "@ngrx/schematics": "^8.3.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/node": "^8.9.5",
     "codelyzer": "^5.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
