--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/material": "^8.1.3",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
+    "@angular/pwa": "^0.803.9",
     "@angular/router": "~8.1.2",
+    "@angular/service-worker": "~8.1.2",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^8.3.0",
     "@ngrx/router-store": "^8.3.0",
