View Academic year page created

--- a/angular.json
+++ b/angular.json
@@ -89,6 +89,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
+              "src/_redirects",
               "src/favicon.ico",
               "src/assets",
               "src/manifest.webmanifest"
