--- a/angular.json
+++ b/angular.json
@@ -98,7 +98,8 @@
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.less"
             ],
-            "scripts": []
+            "scripts": [],
+            "codeCoverage": true
           }
         },
         "lint": {
