--- a/.travis.yml
+++ b/.travis.yml
@@ -16,5 +16,4 @@ cache:
 install:
   - npm install
 script:
-  - npm run test -- --no-watch --no-progress --browsers=ChromeHeadlessCI
-  - npm run e2e --protractor-config=e2e/protractor-ci.conf.js
+  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
