--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ cache:
 install:
   - npm install
 script:
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run test -- --watch=false --no-progress
