--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,7 @@ language: node_js
 node_js: 
   - "12.6.0"
 addons:
-  apt:
-    sources:
-      - google-chrome
-    packages:
-      - google-chrome-stable
+  chrome: stable
 cache:
   directories:
     - ./node_modules
