Fixed travis CI Failing

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,5 @@ install:
   - npm install
 
 script:
-  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  # - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  - npm run test -- --watch=false --browsers=ChromeHeadlessNoSandbox
