--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,4 @@ install:
   - npm install
 
 script:
-  # - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
-  - npm run test -- --watch=false --browsers=Chrome
+  - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
