--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 dist: trusty
 sudo: false
 
+env:
+  global:
+    - CC_TEST_REPORTER_ID=5998bb996330c1b30adbbc5e49526094fe3775d7abd484c5aa7eb3b74bebd486
+
 language: node_js
 node_js:
   - '12.6.0'
@@ -18,6 +22,15 @@ cache:
 
 install:
   - npm install
+  
+before_script:
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+  - chmod +x ./cc-test-reporter
+  - ./cc-test-reporter before-build
 
 script:
   - npm run test -- --watch=false --no-progress --browsers=ChromeHeadlessNoSandbox
+  
+after_script:
+  - ./cc-test-reporter after-build -t lcov --exit-code $TRAVIS_TEST_RESULT
+  
