CIRCLE CI tests failing Fix

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,9 +13,9 @@ jobs:
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
-    # environment:
-    #   CHROME_BIN: /usr/bin/google-chrome
-    working_directory: ~/repo
+    environment:
+      CHROME_BIN: /usr/bin/google-chrome
+    working_directory: ~/FSMSAPP
 
     steps:
       - checkout
